--- a/uncademy_grades_ms/app/config/config.json
+++ b/uncademy_grades_ms/app/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
-    "username": "root",
-    "password": "root",
+    "username": "swarch2022ii",
+    "password": "2022",
     "database": "uncademy_grades_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "root",
+    "username": "swarch2022ii",
+    "password": "2022",
     "database": "uncademy_grades_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "root",
+    "username": "swarch2022ii",
+    "password": "2022",
     "database": "uncademy_grades_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
