--- a/uncademy_grades_ms/Dockerfile
+++ b/uncademy_grades_ms/Dockerfile
@@ -1,1 +1,7 @@
 FROM node:16
+WORKDIR /uncademy_grades_ms
+COPY package.json .
+RUN npm install
+COPY . .
+EXPOSE 8080
+CMD [ "npm", "run", "first" ]
