--- a/uncademy_grades_ms/app/config/config.json
+++ b/uncademy_grades_ms/app/config/config.json
@@ -1,23 +1,23 @@
 {
   "development": {
-    "username": "swarch2022ii",
-    "password": "2022",
+    "username": "root",
+    "password": "root",
     "database": "uncademy_grades_db",
-    "host": "172.17.0.2",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "swarch2022ii",
-    "password": "2022",
+    "username": "root",
+    "password": "root",
     "database": "uncademy_grades_db",
-    "host": "172.17.0.2",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "swarch2022ii",
-    "password": "2022",
+    "username": "root",
+    "password": "root",
     "database": "uncademy_grades_db",
-    "host": "172.17.0.2",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   }
 }
